Fixed bug: Fixed responsive desing in navbar that was causing overlapping

--- a/src/styles/components/FeaturedItems.styles.css
+++ b/src/styles/components/FeaturedItems.styles.css
@@ -29,7 +29,7 @@
 
 @media screen and (max-width:500px) {
     .f-item {
-        font-size: 44px;
+        font-size: 38px;
     }
     .f-item p{
         font-size: 14px;
@@ -38,4 +38,5 @@
     .f-item:hover{
         color:#fff;
     }
+
 }
