--- a/src/styles/components/NavbarButton.styles.css
+++ b/src/styles/components/NavbarButton.styles.css
@@ -11,7 +11,6 @@
     padding: 0;
     text-align: center;
     margin: 0;
-
 }
 .menu-trigger{
     position: absolute;
@@ -20,7 +19,7 @@
     cursor: pointer;
     color: white;
     top: 10px;
-    padding: 10px 4px;
+    padding: 10px ;
     transition: 500ms;
     border-radius: 5px;
     transform: skewX(-4.5deg);
@@ -49,6 +48,7 @@
   }
   .dropdown-menu.inactive{
     opacity: 0;
+    overflow: hidden;
     visibility: hidden;
     transform: translateY(-20px);
     transition: 500ms ease;
@@ -129,5 +129,18 @@
       font-weight: 600;
       font-size: 10px;
       transform: none;
+    }
+    .dropdown-menu{
+      position: absolute;
+      top: 60px;
+      height: 30vh;
+      width: 10vw;
+      background-color: black;
+      padding: 10px 20px;
+      border-radius: 5px;
+      z-index: 1000;
+    }
+    .dropdownItem{
+      font-size: 12px;
     }
   }
